support more webpages

--- a/css/content-script.css
+++ b/css/content-script.css
@@ -1,11 +1,14 @@
+/*noinspection CssUnusedSymbol*/
 #container {
     height: calc(100% - 42px);
 }
 
+/*noinspection CssUnusedSymbol*/
 #bodySideContent {
     height: calc(100% - 36px);
 }
 
+/*noinspection CssUnusedSymbol*/
 #conScroll {
     height: calc(100% - 70px);
 }
