--- a/css/content-script.css
+++ b/css/content-script.css
@@ -18,12 +18,13 @@
     visibility: hidden;
     position: absolute;
     z-index: 1;
+    margin-left: -1em;
     border-radius: 0.5em;
+    padding: 0.2em;
     background-color: #555;
     text-align: center;
     color: #fff;
     font-size: 0.8em;
-    padding: 0.2em;
     top: -1.5em;
 }
 
