--- a/css/content-script.css
+++ b/css/content-script.css
@@ -18,14 +18,14 @@
     visibility: hidden;
     position: absolute;
     z-index: 1;
-    margin-left: -1em;
+    margin: auto;
     border-radius: 0.5em;
     padding: 0.2em;
     background-color: #555;
     text-align: center;
     color: #fff;
     font-size: 0.8em;
-    top: -1.5em;
+    top: -1.55em;
 }
 
 /*noinspection CssUnusedSymbol*/
